start work on better converter arcitecture

--- a/AbstractConverterLib/AbstractConverterLib.csproj
+++ b/AbstractConverterLib/AbstractConverterLib.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Config\ConverterConfig.cs" />
     <Compile Include="Config\DictionaryToStringConfig.cs" />
+    <Compile Include="Converter.cs" />
     <Compile Include="ConvToString.cs" />
     <Compile Include="DataField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
