--- a/AbstractConverterLib/AbstractConverterLib.csproj
+++ b/AbstractConverterLib/AbstractConverterLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Converter.cs" />
     <Compile Include="ConvToString.cs" />
     <Compile Include="DataField.cs" />
+    <Compile Include="EvalType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnableToConvertException.cs" />
   </ItemGroup>
