--- a/AbstractConverterLib/AbstractConverterLib.csproj
+++ b/AbstractConverterLib/AbstractConverterLib.csproj
@@ -49,6 +49,7 @@
     <Compile Include="EvalType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnableToConvertTypeException.cs" />
+    <Compile Include="UnconvertableDataException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
