--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ToIntTests.cs" />
     <Compile Include="ToStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToBoolTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
