--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToBoolTests.cs" />
     <Compile Include="ToDoubleTests.cs" />
+    <Compile Include="ToDecimalTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
