add start of to long tests

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ToFloatTests.cs" />
+    <Compile Include="ToLongTests.cs" />
     <Compile Include="ToIntTests.cs" />
     <Compile Include="ToStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
